# RTSOFT_homeworks

./: CMakeLists.txt  homework_1.cpp  homework_2.cpp
homework 3/: homework3.ipynb
neural_networks/: cifar10_test.ipynb  fashion_mnist_test.ipynb  mnist_test.ipynb
